examples/test/testpolicy8391.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8391
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key15: value13
      key40: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value22
          key25: value33
          key27: value44
      podSelector:
        matchLabels:
          key7: value0
          key22: value17
